PyMaker/datas/object2/RawHTML/i10601/Python_DOC_referPages.concatenation-invalid-syntax.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/25445439/what-does-syntaxerror-missing-parentheses-in-call-to-print-mean-in-python">What does “SyntaxError: Missing parentheses in call to 'print'” mean in Python?</a>
<span class="question-originals-answer-count">
                    6 answers
                </span>
</li>
</ul>
</div>
<p>I have this code:</p>
<pre><code>zeroct_pre = 0
total_pre = 10
pct = round((zeroct_pre/float(total_pre))*100,1)
print 'Number of &gt;= 1 pre-submissions: ' + str(zeroct_pre) + ' (' + str(pct) + '%)'
</code></pre>
<p>But gives this error:</p>
<pre><code>  File "count.py", line 4
    print 'Number of &gt;= 1 pre-submissions: ' + str(zeroct_pre) + ' (' + str(pct) + '%)'
                                       ^
SyntaxError: invalid syntax
</code></pre>
<p>I've tried changing all <code>'</code> to <code>"</code> but same error. I'm running Python 3.5.1, any thoughts on why? This code was just working and I've made no changes (no whitespace changes etc).</p>
</div>
<div class="post-text" itemprop="text">
<p>In Python 3, print is now a function. You're trying to use the Python 2 syntax for printing.</p>
<p>Take a look at this: <a href="https://docs.python.org/3/whatsnew/3.0.html" rel="nofollow">https://docs.python.org/3/whatsnew/3.0.html</a></p>
<p>You need to add parenthesis:</p>
<pre><code>print ('Number of &gt;= 1 pre-submissions: ' + str(zeroct_pre) + ' (' + str(pct) + '%)')
</code></pre>
</div>
<span class="comment-copy">Python &gt;=3 uses print as a function</span>
<span class="comment-copy">Probable should avoid answer questions like this. It has already been asked <b>several</b> times before and has answers.</span>
